--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -40,6 +38,20 @@
             android:name=".ActivityUserProfile"
             android:label="@string/title_activity_user_profile"
             android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".ActivityCreateNewEvent"
+            android:label="@string/title_activity_create_new_event"
+            android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".ActivityEventDetail"
+            android:label="@string/title_activity_event_detail"
+            android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".ActivityShowEventUsersMap"
+            android:label="@string/title_activity_show_event_users_map" >
         </activity>
     </application>
 
