--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <permission
+        android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Required OpenGL ES 2.0. for Maps V2 -->
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:name=".SkiBuddyApplication"
         android:allowBackup="true"
@@ -19,6 +29,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD9nQ2bCpdWQKSOjORma_dlz1tCozvLYiU"/>
+
+        <!-- Goolge API Key for Tracking Map -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDBZ8e6TvT6mOBPKLdCxwoYd74zrXpF-p4" />
             
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -57,6 +72,10 @@
         <activity
             android:name=".ActivityShowEventUsersMap"
             android:label="@string/title_activity_show_event_users_map" >
+        </activity>
+        <activity
+            android:name=".ActivityTrack"
+            android:label="@string/title_activity_track" >
         </activity>
     </application>
 
