--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <permission
         android:name="info.androidhive.googlemapsv2.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- Required OpenGL ES 2.0. for Maps V2 -->
@@ -24,11 +26,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD9nQ2bCpdWQKSOjORma_dlz1tCozvLYiU"/>
-
+            android:value="AIzaSyD9nQ2bCpdWQKSOjORma_dlz1tCozvLYiU" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -66,14 +66,24 @@
         </activity>
         <activity
             android:name=".ActivityShowEventUsersMap"
-            android:label="@string/title_activity_show_event_users_map" >
+            android:label="@string/title_activity_show_event_users_map"
+            android:theme="@style/CustomActionBarTheme" >
         </activity>
-
         <activity
             android:name=".ActivityTrack"
-            android:label="@string/title_activity_track" >
+            android:label="@string/title_activity_track"
+            android:theme="@style/CustomActionBarTheme" >
         </activity>
-
+        <activity
+            android:name=".ActivityTrackDetail"
+            android:label="@string/title_activity_track_detail"
+            android:theme="@style/CustomActionBarTheme" >
+        </activity>
+        <activity
+            android:name=".ActivityTrackContainer"
+            android:label="@string/title_activity_track_container"
+            android:theme="@style/CustomActionBarTheme">
+        </activity>
     </application>
 
 </manifest>
